<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
<group android:checkableBehavior="single">
    <item android:id="@+id/navi_android"
           android:title="@string/android"
           android:icon="@drawable/android"
        />

    <item android:id="@+id/navi_rate"
        android:title="@string/rate_us"
        android:icon="@drawable/rate"
        />

    <item android:id="@+id/feedback"
        android:title="@string/feedback"
        android:icon="@drawable/feedback"
        />




</group>

    <item android:title="@string/social_link"

        >

      <menu>
          <item android:id="@+id/share"
              android:title="@string/share_link"
              android:icon="@drawable/share"
              />

          <item android:id="@+id/navi_send"
              android:icon="@drawable/send"
              android:title="@string/send"/>

          <item android:id="@+id/setting"
              android:icon="@drawable/setting"
              android:title="@string/setting"/>


          <item android:id="@+id/ofline"
              android:icon="@drawable/ofline"
              android:title="@string/ofline"/>


          <item android:id="@+id/uplode"
              android:icon="@drawable/uplode"
              android:title="@string/uplode"/>




      </menu>

    </item>
</menu>